--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -89,6 +89,21 @@ header {
     padding: 5px 20px;
 }
 
+footer {
+    background-color: #111111;
+    text-align: center;
+    padding: 5px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+footer p {
+    font-size: 0.8rem;
+    color: #888888;
+    margin-top: 5px;
+}
+
 /* Login Container */
 .login-container {
     background-color: rgba(255, 255, 255, 0.15);
